apps/hajimari/networkpolicies/egress-hajimari.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-hajimari
  namespace: hajimari
spec:
  selector: app.kubernetes.io/instance == 'hajimari'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
