apps/hajimari/networkpolicies/hajimari-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: hajimari-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'hajimari'
        selector: app.kubernetes.io/instance == 'hajimari'
        ports:
          - 3000
