apps/hajimari/networkpolicies/hajimari.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hajimari
  namespace: hajimari
spec:
  endpointSelector:
    matchLabels:
      app: hajimari
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube-api
              protocol: TCP
