apps/hajimari/networkpolicies/ingress-hajimari.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-hajimari
  namespace: hajimari
spec:
  selector: app.kubernetes.io/instance == 'hajimari'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 3000
