apps/hajimari/networkpolicies/traefik-egress-hajimari.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-hajimari
  namespace: hajimari
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            serviceName: hajimari
            namespace: hajimari
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
